--- a/frontend/src/locales/en.json
+++ b/frontend/src/locales/en.json
@@ -11,7 +11,8 @@
     "categories": {
       "roadTraffic": "Road & Traffic",
       "environmentSafety": "Environment & Safety",
-      "civicServices": "Civic Services"
+      "civicServices": "Civic Services",
+      "management": "Management"
     },
     "issues": {
       "pothole": "Pothole",
@@ -27,7 +28,11 @@
       "reportIssue": "Report Issue",
       "brokenInfra": "Broken Infra",
       "graffiti": "Graffiti",
-      "findMLA": "Find MLA"
+      "findMLA": "Find MLA",
+      "grievanceManagement": "Grievance Management",
+      "viewStats": "View Stats",
+      "leaderboard": "Leaderboard",
+      "responsibilityMap": "Responsibility Map"
     },
     "stats": {
       "totalImpact": "Total Impact",
