feat: expand language support to 56 languages including all official Indian languages and major international languages

--- a/frontend/src/locales/hi.json
+++ b/frontend/src/locales/hi.json
@@ -35,6 +35,39 @@
       "totalImpact": "कुल प्रभाव",
       "issuesResolved": "मुद्दे हल हुए",
       "activeUsers": "सक्रिय उपयोगकर्ता"
+    },
+    "landing": {
+      "empowering": "नागरिकों को सशक्त बनाना",
+      "governance": "बेहतर शासन के लिए",
+      "subtitle": "नागरिक मुद्दों की रिपोर्ट करें और एआई-जनित समाधान प्राप्त करें। शासन में सक्रिय रूप से भाग लेने के लिए टेलीग्राम के माध्यम से अधिकारियों से जुड़ें।",
+      "cta": "कार्रवाई शुरू करें",
+      "cards": {
+        "reportCitizens": "नागरिकों के साथ रिपोर्ट करें",
+        "generatedCivic": "जनित नागरिक शासन",
+        "govServices": "सरकारी सेवाएँ",
+        "questionGov": "सरकार से सवाल करें",
+        "govDesc": "प्रश्न सबमिट करें, पारदर्शिता की मांग करें और अधिकारियों को जवाबदेह ठहराएं",
+        "communityAction": "सामुदायिक कार्रवाई",
+        "joinMovement": "आंदोलन में शामिल हों"
+      },
+      "features": {
+        "publicTrust": "सार्वजनिक विश्वास",
+        "ethics": "और नैतिकता",
+        "civicIssues": "नागरिक मुद्दे",
+        "reportProblems": "समस्याओं की रिपोर्ट करें",
+        "voiceVote": "अपनी आवाज़ उठाएं",
+        "shareIdeas": "बेहतर नीतियों के लिए विचार साझा करें",
+        "aiDemocracy": "लोकतंत्र के लिए एआई",
+        "civicActions": "और नागरिक कार्रवाई",
+        "aiDesc": "पारदर्शी शासन और त्वरित समाधान के लिए प्रौद्योगिकी का लाभ उठाना।",
+        "smartAnalysis": "स्मार्ट विश्लेषण",
+        "aiInsights": "एआई-संचालित अंतर्दृष्टि",
+        "citizenCount": "10k+ सक्रिय नागरिक",
+        "secureSafe": "सुरक्षित और सुरक्षित",
+        "verifiedReports": "सत्यापित रिपोर्ट",
+        "quickAction": "त्वरित कार्रवाई",
+        "responseTime": "24 घंटे प्रतिक्रिया समय"
+      }
     }
   },
   "common": {
@@ -43,6 +76,7 @@
     "submit": "सबमिट करें",
     "cancel": "रद्द करें",
     "yes": "हाँ",
-    "no": "नहीं"
+    "no": "नहीं",
+    "back": "पीछे"
   }
 }
